# chip-8-rs

./: Cargo.toml  README.md
src/: app.rs  assembly.rs  chip8.rs  lib.rs  machine.rs  main.rs
