[package]
name = "rust-chip-8"
version = "0.1.0"
authors = ["jmurray"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

piston_window = "0.117.0"
piston = "0.52.0"
piston2d-graphics = "0.39.0"
piston2d-opengl_graphics = "0.77.0"
image = "0.23.12"

rand = "0.8.3"